Adding fast profile to run tests in parallel